# Patchs

./: 1v1arena.patch  ArenaSpectator.diff  Passive Anti-cheat.patch  README.md  TransmogDisplayVendorEN.diff  World-chat.patch  banannounce.patch  chatspy.patch  codeboxnpc.patch  dev-reloadtemplates.patch  disablefatigue.patch  doorcodesnpc.patch  emeralddream.patch  gamble.patch  gameobjectteleports.patch  goldafterduel.patch  itemsummonnpc.patch  occhat.patch  ocpatch-full.patch  renamenpc.patch  rentalmountnpc.patch  tokensnpc.patch  worldchat.patch
Control Panel/: Readme.txt  (+1 more)
Mist of Pandaria(TrinityCore 5.1.0)/src/server/game/: CMakeLists.txt
Mist of Pandaria(TrinityCore 5.1.0)/src/server/game/AI/CoreAI/: PetAI.cpp  TotemAI.cpp  UnitAI.cpp
Mist of Pandaria(TrinityCore 5.1.0)/src/server/game/AI/ScriptedAI/: ScriptedCreature.cpp  ScriptedCreature.h
Mist of Pandaria(TrinityCore 5.1.0)/src/server/game/Achievements/: AchievementMgr.cpp  AchievementMgr.h
Mist of Pandaria(TrinityCore 5.1.0)/src/server/game/Addons/: AddonMgr.h
Mist of Pandaria(TrinityCore 5.1.0)/src/server/game/AuctionHouse/: AuctionHouseMgr.cpp
Mist of Pandaria(TrinityCore 5.1.0)/src/server/game/BattlePet/: BattlePetMgr.cpp
Mist of Pandaria(TrinityCore 5.1.0)/src/server/game/Battlefield/: Battlefield.cpp
Mist of Pandaria(TrinityCore 5.1.0)/src/server/game/Battlegrounds/: Battleground.cpp  Battleground.h  BattlegroundMgr.cpp  BattlegroundQueue.cpp
Mist of Pandaria(TrinityCore 5.1.0)/src/server/game/Battlegrounds/Zones/: BattlegroundBFG.cpp  BattlegroundBFG.h  BattlegroundSM.cpp  BattlegroundSM.h  BattlegroundTA.cpp  BattlegroundTA.h  BattlegroundTK.cpp  BattlegroundTK.h  BattlegroundTP.cpp  BattlegroundTP.h
Mist of Pandaria(TrinityCore 5.1.0)/src/server/game/BlackMarket/: BlackMarketMgr.cpp  BlackMarketMgr.h
Mist of Pandaria(TrinityCore 5.1.0)/src/server/game/Chat/: Chat.cpp  ChatLink.cpp
Mist of Pandaria(TrinityCore 5.1.0)/src/server/game/Chat/Channels/: Channel.cpp
Mist of Pandaria(TrinityCore 5.1.0)/src/server/game/Conditions/: DisableMgr.cpp
Mist of Pandaria(TrinityCore 5.1.0)/src/server/game/DataStores/: DB2Stores.cpp  DB2Stores.h  DB2Structure.h  DB2fmt.h  DBCEnums.h  DBCStores.cpp  DBCStores.h  DBCStructure.h  DBCfmt.h
Mist of Pandaria(TrinityCore 5.1.0)/src/server/game/DungeonFinding/: LFGMgr.cpp  LFGMgr.h
Mist of Pandaria(TrinityCore 5.1.0)/src/server/game/Entities/Creature/: Creature.cpp  Creature.h  GossipDef.cpp  TemporarySummon.h
Mist of Pandaria(TrinityCore 5.1.0)/src/server/game/Entities/DynamicObject/: DynamicObject.cpp
Mist of Pandaria(TrinityCore 5.1.0)/src/server/game/Entities/Item/: Item.cpp  Item.h  ItemPrototype.h
Mist of Pandaria(TrinityCore 5.1.0)/src/server/game/Entities/Object/: Object.cpp  Object.h  ObjectDefines.h
Mist of Pandaria(TrinityCore 5.1.0)/src/server/game/Entities/Pet/: Pet.cpp  Pet.h  PetDefines.h
Mist of Pandaria(TrinityCore 5.1.0)/src/server/game/Events/: GameEventMgr.cpp
Mist of Pandaria(TrinityCore 5.1.0)/src/server/game/Globals/: ObjectMgr.cpp  ObjectMgr.h
Mist of Pandaria(TrinityCore 5.1.0)/src/server/game/Groups/: Group.cpp  Group.h
Mist of Pandaria(TrinityCore 5.1.0)/src/server/game/Guilds/: Guild.cpp  Guild.h
Mist of Pandaria(TrinityCore 5.1.0)/src/server/game/Handlers/: AddonHandler.cpp  ArenaTeamHandler.cpp  AuthHandler.cpp  BattleGroundHandler.cpp  BlackMarketHandler.cpp  ChannelHandler.cpp  CharacterHandler.cpp  ChatHandler.cpp  CombatHandler.cpp  DuelHandler.cpp  GroupHandler.cpp  GuildFinderHandler.cpp  GuildHandler.cpp  ItemHandler.cpp  LFGHandler.cpp  LootHandler.cpp  MailHandler.cpp  MiscHandler.cpp  MovementHandler.cpp  NPCHandler.cpp  PetHandler.cpp  QueryHandler.cpp  QuestHandler.cpp  SkillHandler.cpp  SpellHandler.cpp  TaxiHandler.cpp  TradeHandler.cpp  VoidStorageHandler.cpp
Mist of Pandaria(TrinityCore 5.1.0)/src/server/game/Instances/: InstanceSaveMgr.cpp
Mist of Pandaria(TrinityCore 5.1.0)/src/server/game/Loot/: LootMgr.cpp  LootMgr.h
Mist of Pandaria(TrinityCore 5.1.0)/src/server/game/Mails/: Mail.cpp  Mail.h
Mist of Pandaria(TrinityCore 5.1.0)/src/server/game/Maps/: Map.cpp  Map.h  MapManager.cpp
Mist of Pandaria(TrinityCore 5.1.0)/src/server/game/Mastery/: MasteryMgr.cpp  MasteryMgr.h
Mist of Pandaria(TrinityCore 5.1.0)/src/server/game/Miscellaneous/: Formulas.h  Language.h  SharedDefines.h
Mist of Pandaria(TrinityCore 5.1.0)/src/server/game/Movement/: MovementStructures.h  PathGenerator.cpp
Mist of Pandaria(TrinityCore 5.1.0)/src/server/game/Quests/: QuestDef.cpp  QuestDef.h
Mist of Pandaria(TrinityCore 5.1.0)/src/server/game/Reputation/: ReputationMgr.cpp
Mist of Pandaria(TrinityCore 5.1.0)/src/server/game/Scripting/: ScriptLoader.cpp  ScriptLoader.h  ScriptMgr.h
Mist of Pandaria(TrinityCore 5.1.0)/src/server/game/Server/: WorldSession.cpp  WorldSession.h  WorldSocket.cpp  WorldSocket.h
Mist of Pandaria(TrinityCore 5.1.0)/src/server/game/Spells/: Spell.cpp  Spell.h  SpellEffects.cpp  SpellInfo.cpp  SpellInfo.h  SpellLearn.cpp  SpellLearn.h  SpellMgr.cpp  SpellMgr.h  SpellScript.h
Mist of Pandaria(TrinityCore 5.1.0)/src/server/game/Texts/: CreatureTextMgr.cpp
Mist of Pandaria(TrinityCore 5.1.0)/src/server/game/Tickets/: TicketMgr.cpp
Mist of Pandaria(TrinityCore 5.1.0)/src/server/game/Tools/: CharacterDatabaseCleaner.cpp
Mist of Pandaria(TrinityCore 5.1.0)/src/server/game/World/: World.cpp  World.h
(+440 files in other folders)
